--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -285,7 +285,7 @@ main {
     }
 
     h2 {
-        font-size: 5vw;
+        font-size: 4vw;
         padding: 1vw;
     }
 
